--- a/plugins/lgdis/app/views/issues/show.html.erb
+++ b/plugins/lgdis/app/views/issues/show.html.erb
@@ -147,3 +147,5 @@ end %>
 <% end %>
 
 <%= context_menu issues_context_menu_path %>
+
+<div id="latlng_image_field" style="display: none;"><%= get_image_latlng(@issue) %></div>
