--- a/plugins/lgdis/app/views/shelters/edit.html.erb
+++ b/plugins/lgdis/app/views/shelters/edit.html.erb
@@ -14,6 +14,9 @@
     </span>
   </h2>
 
+  <p><%= l(:document_id) + ": " + (@edition_management.present? ? @edition_management.uuid.to_s : "") %></p>
+  <p><%= l(:document_revision) + ": " + (@edition_management.present? ? @edition_management.edition_num.to_s : "") %></p>
+
   <div class="box tabular">
     <div id="all_attributes">
       <% @disabled = true unless authorize_for(:shelters, :update) # 権限判定 %>
