--- a/plugins/lgdis/app/views/shelters/index.html.erb
+++ b/plugins/lgdis/app/views/shelters/index.html.erb
@@ -1,7 +1,8 @@
 <% html_title l(:label_shelter_plural) -%>
 
 <h2><%= l(:label_shelter_plural) %></h2>
-
+<p><%= l(:document_id) + ": " + (@edition_management.present? ? @edition_management.uuid.to_s : "") %></p>
+<p><%= l(:document_revision) + ": " + (@edition_management.present? ? @edition_management.edition_num.to_s : "") %></p>
 <%= error_messages_for_shelters(@shelters) %>
 
 <%= form_for @search, :url => project_shelters_search_path, :html => {:method => :post} do |f| %>
